tests/interpreter/if-statement-test-expr-error.stderr
error: identifier 'x' is not defined
 --> $DIR/if-statement-test-expr-error.lox:1:4
  |
1 | if x {
  |    ^
